--- a/src/pages/Profile/style.css
+++ b/src/pages/Profile/style.css
@@ -5,8 +5,32 @@
 
 .profile__container{
     display: flex;
-    width: 100%;
     justify-content: space-between;
     max-width: 960px;
     margin: 50px auto 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .profile__container {
+        margin: 50px 40px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .card__description {
+        font-size: 16px !important;
+    }
+    .card__title {
+        font-size: 26px !important;
+    }
+}
+
+@media screen and (max-width: 725px) {
+    .profile__container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
