--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,15 +1,12 @@
+
 .card__container{
     text-align: left;
     margin-bottom: 20px;
     border: 1px solid #bebebe;
     padding: 10px;
     border-radius: 8px;
+    word-wrap: break-word;
 }
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
-    font-family: "Raleway",sans-serif;
-}
-
 .card__title{
     color: #24292E;
     font-weight: normal;
@@ -29,6 +26,7 @@
 
 .icon__box img{
     margin-right: 5px;
+    width: 20px;
 }
 
 .icon__box, .card__description {
